--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,10 +14,22 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-
+  http: ^1.1.0
+  iconsax: ^0.0.8
+  cupertino_icons: ^1.0.2
+  flutter_spinkit: ^5.2.0
+  animated_text_kit: ^4.2.2
+  google_nav_bar: ^5.0.6
+  provider: ^6.1.2
+  device_info_plus: ^9.1.2
+  url_launcher: ^6.2.5
+  encrypt: ^5.0.3
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
+  
 
   flutter_lints: ^3.0.0
 
