--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,14 +24,35 @@ dependencies:
   device_info_plus: ^9.1.2
   url_launcher: ^6.2.5
   encrypt: ^5.0.3
-  
+  google_mobile_ads: ^4.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  
+  flutter_lints: ^3.0.0
+  flutter_launcher_icons: "^0.13.1"
   
 
-  flutter_lints: ^3.0.0
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "icons/icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  remove_alpha_ios: true
+  web:
+    generate: true
+    image_path: "icons/icon.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "icons/icon.png"
+    icon_size: 48
+  macos:
+    generate: true
+    image_path: "icons/icon.png" 
+
+
 
 flutter:
   uses-material-design: true
